--- a/CSS/style.css
+++ b/CSS/style.css
@@ -163,3 +163,64 @@ p{
     text-align:left;
     line-height: 30px;
 }
+/*Atributos tarjetas Mywork*/
+.work-container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 310px;
+    height: 450px;
+    margin-bottom: 25px;
+
+}
+.work-container section{
+    position: relative;
+    cursor: pointer;  
+}
+.work-container section .img-work{
+    width: 310px;
+    height: 450px;
+    display: block;
+    border-radius: 10px;
+    transition: all 500ms ease-out;
+}
+/*Atributos para hover en tarjetas MyWork*/
+.work-container section .capa{
+    position:absolute;
+    border-radius: 10px;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background:rgba(139, 139, 139,0.7);
+    transition: all 500ms ease-out;
+    opacity: 0;
+    visibility: hidden;
+    text-align: center;
+}
+.work-container section:hover > .capa{
+    opacity: 1;
+    visibility: visible;
+}.work-container section:hover > .img-work{
+    transform: scale(1.03);
+}
+.work-container section:hover > .capa h2{
+    margin-top: 110px;
+    margin-bottom: 15px;
+}
+.work-container section .capa h2{
+    color: var(--white);
+    font-weight: 400;
+    margin-bottom: 120px;
+    transition: all 500ms ease-out;
+    margin-top: 30px;
+}
+.work-container section .capa p{
+    color:var(--white);
+    font-size:1em;
+    line-height: 1.5;
+    width: 100%;
+    max-width: 220px;
+    margin: auto;
+}
